@startuml

title __WORLD's Class Diagram__\n

  namespace games.TestGame {
    namespace Dungeon {
      namespace World {
        class games.TestGame.Dungeon.World.DungeonGenerator {
            ~ xs : Set<Integer>
            ~ ys : Set<Integer>
            - NUMBER_OF_POINTS : int
            - RANDOM_PATHS : int
            - ROOM_MAX_SIZE : int
            - ROOM_MIN_DISTANCE : int
            - ROOM_MIN_SIZE : int
            - SIZE_X : int
            - SIZE_Y : int
            - points : List<Point>
            - rooms : List<Rectangle>
            + DungeonGenerator()
            {static} + drawPath()
            {static} + drawPathPoint()
            + drawPaths()
            {static} + drawRectangle()
            + generateMap()
            {static} + printMap()
            + setNUMBER_OF_POINTS()
            + setRANDOM_PATHS()
            + setROOM_MAX_SIZE()
            + setROOM_MIN_DISTANCE()
            + setROOM_MIN_SIZE()
            + setSIZE_X()
            + setSIZE_Y()
        }
      }
    }
  }
  

  namespace games.TestGame {
    namespace Dungeon {
      namespace World {
        class games.TestGame.Dungeon.World.Exit {
            + Exit()
            + moveInto()
        }
      }
    }
  }
  

  namespace games.TestGame {
    namespace Dungeon {
      namespace World {
        class games.TestGame.Dungeon.World.Level {
            + Level()
            + getBackground()
            + getFloor()
            + getForeground()
            + getMazeMatrix()
            + getOverlay()
            + spawn()
        }
      }
    }
  }
  

  namespace games.TestGame {
    namespace Dungeon {
      namespace World {
        class games.TestGame.Dungeon.World.Wall {
            + Wall()
            + moveInto()
        }
      }
    }
  }
  

  games.TestGame.Dungeon.World.Exit .up.|> games.TestGame.Dungeon.MoveInto
  games.TestGame.Dungeon.World.Exit -up-|> engine.Tile
  games.TestGame.Dungeon.World.Level -up-|> engine.TableTop
  games.TestGame.Dungeon.World.Wall .up.|> games.TestGame.Dungeon.MoveInto
  games.TestGame.Dungeon.World.Wall -up-|> engine.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
